environments/production/patches/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodflow-api
spec:
  template:
    spec:
      containers:
        - name: api
          # Updated by CI/CD pipeline
          image: ghcr.io/simonbrundin/foodflow:ff9dd4bac6f1a8b260972f7347fa0c4a8d43d842
