environments/production/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodflow-app
spec:
  template:
    spec:
      containers:
        - name: foodflow-app
          # Updated by CI/CD pipeline
          image: ghcr.io/simonbrundin/foodflow@sha256:953f0228b88188d7ae5c2929391eafc4a8000ca0691bdb559040b7f0b160281e
