environments/production/patches/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foodflow-route
  namespace: foodflow
spec:
  hostnames:
    - "foodflow.simonbrundin.com"
